--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Update Image Tag
         run: | 
           cd Book_Application_Helm_Chart/mychart
-          $new_tag="v${{github.run_number}}"
+          new_tag="v${{github.run_number}}"
           sed -i "s/\(frontend_tag:\s*\).*/\1$new_tag/" values.yaml
       - name: Commit the Chart 
         run: |
